// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionControl rendering renders with defaults 1`] = `
<WithInstanceId(SelectControl)
  className="block-editor-dimension-control"
  hideLabelFromVision={false}
  label={
    <React.Fragment>
      Padding
    </React.Fragment>
  }
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "Please select…",
        "value": "",
      },
      Object {
        "label": "None",
        "value": "none",
      },
      Object {
        "label": "Small",
        "value": "small",
      },
      Object {
        "label": "Medium",
        "value": "medium",
      },
      Object {
        "label": "Large",
        "value": "large",
      },
      Object {
        "label": "Extra Large",
        "value": "xlarge",
      },
    ]
  }
/>
`;

exports[`DimensionControl rendering renders with icon and custom icon label 1`] = `
<WithInstanceId(SelectControl)
  className="block-editor-dimension-control"
  hideLabelFromVision={false}
  label={
    <React.Fragment>
      <Icon
        icon="tablet"
        label="Tablet Devices"
      />
      Margin
    </React.Fragment>
  }
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "Please select…",
        "value": "",
      },
      Object {
        "label": "None",
        "value": "none",
      },
      Object {
        "label": "Small",
        "value": "small",
      },
      Object {
        "label": "Medium",
        "value": "medium",
      },
      Object {
        "label": "Large",
        "value": "large",
      },
      Object {
        "label": "Extra Large",
        "value": "xlarge",
      },
    ]
  }
/>
`;

exports[`DimensionControl rendering renders with icon and default icon label 1`] = `
<WithInstanceId(SelectControl)
  className="block-editor-dimension-control"
  hideLabelFromVision={false}
  label={
    <React.Fragment>
      <Icon
        icon="tablet"
        label="all"
      />
      Margin
    </React.Fragment>
  }
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "Please select…",
        "value": "",
      },
      Object {
        "label": "None",
        "value": "none",
      },
      Object {
        "label": "Small",
        "value": "small",
      },
      Object {
        "label": "Medium",
        "value": "medium",
      },
      Object {
        "label": "Large",
        "value": "large",
      },
      Object {
        "label": "Extra Large",
        "value": "xlarge",
      },
    ]
  }
/>
`;
